# jsonlisp

./: .pre-commit-config.yaml  Makefile  README.rst  __init__.py  __main__.py  pyproject.toml  test.json
jsonlisp/: __init__.py  __main__.py
tests/: test_jsonlisp.py
