[tool.poetry]
name = "jsonlisp"
version = "0.1.0"
description = "Primitive Lisp using JSON as concrete syntax written in Python"
authors = ["Denis Lesnov <denis@lesnov.me>"]

[tool.poetry.dependencies]
python = "^3.7"
ipdb = "^0.13.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


# Example configuration for Black.

# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.

[tool.black]
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'

[tool.isort]
force_single_line = true
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
